[gd_scene load_steps=11 format=3 uid="uid://ckyu7uovsxcpq"]

[ext_resource type="Script" path="res://scripts/hand.gd" id="1_leyk5"]
[ext_resource type="Texture2D" uid="uid://c27kfv7lajcpx" path="res://images/b_hand_open.png" id="1_yob5d"]
[ext_resource type="Texture2D" uid="uid://x6ajgq0wr0dl" path="res://images/b_hand_grab.png" id="2_djxsl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uu5ym"]
radius = 33.2415

[sub_resource type="AtlasTexture" id="AtlasTexture_koapl"]
atlas = ExtResource("1_yob5d")
region = Rect2(0, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik42s"]
atlas = ExtResource("2_djxsl")
region = Rect2(0, 0, 400, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_750eo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_koapl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik42s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_gda5c"]
resource_name = "interacrt"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.4, 0.566667, 0.733333, 0.9, 1.06667, 1.23333, 1.4, 1.56667, 1.73333, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(20, -20), Vector2(30, -20), Vector2(-30, -20), Vector2(-20, -30), Vector2(-20, 30), Vector2(-30, 20), Vector2(30, 20), Vector2(20, 30), Vector2(20, -30), Vector2(20, -20), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_txsmq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smbvh"]
_data = {
"RESET": SubResource("Animation_txsmq"),
"interacrt": SubResource("Animation_gda5c")
}

[node name="Hand" type="Node2D"]
z_index = 5
script = ExtResource("1_leyk5")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area" type="Area2D" parent="."]
collision_layer = 0

[node name="Shape" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_uu5ym")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_750eo")

[node name="HoldSpot" type="Marker2D" parent="Sprite"]

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_smbvh")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_area_area_exited"]
